<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.DeliveryActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/delivery_customer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        app:cardCornerRadius="11dp"
        android:elevation="11dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:scrollbars="vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delivery_barcode"
                android:layout_width="110dp"
                android:minHeight="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/barcode" />

            <LinearLayout
                android:gravity="left|center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/delivery_name"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_height="wrap_content"
                    android:text="Customer name Here"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="15dp"
                    android:layout_margin="7dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="6dp"
                    android:text="Customer name Here"
                    android:layout_marginBottom="3dp"
                    android:textColor="@android:color/black"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <ImageView
                    android:id="@+id/delivery_makecall"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"
                    android:tint="@android:color/holo_blue_light"
                    />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:padding="6dp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="17dp"
        android:text="@string/your_signature"/>

    <com.github.gcacace.signaturepad.views.SignaturePad
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/delivery_signature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        app:penColor="@android:color/black"
        android:background="@drawable/white_board_bg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.15">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.35">

            <Button
                android:id="@+id/delivery_clear_signature"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="sans-serif-thin"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:background="@drawable/button_signature_clear"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/clear_signature"/>

            <Button
                android:id="@+id/delivery_save"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="sans-serif-thin"
                android:textStyle="bold"
                android:background="@drawable/button_delivery_ok"
                android:textColor="@color/white"
                android:text="@string/packet_status_save"
                android:layout_weight="0.5"/>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>